# Brandy

./: .gitignore  Brandy.cabal  LICENSE  README.md
src/: ApiUtility.hs  Core.hs  Database.hs  Main.hs  Plugins.hs  Routing.hs  Schema.hs  Uri.hs
src/Api/: ResourceContent.hs  Resources.hs  Tags.hs  Users.hs
src/DataAccess/: ResourceContent.hs  Resources.hs  Tags.hs  Users.hs
src/Json/: PrivateUser.hs  PrivateUserPre.hs  PublicUserSummary.hs  Resource.hs  Tag.hs  WithId.hs
src/Plugins/AdminSite/: Plugin.hs
src/Transforms/: Resource.hs  ResourceTransform.hs
test/: TestUtility.hs  UserTestUtility.hs  Utility.hs
test/Api/: ResourceContentSpec.hs  ResourcesSpec.hs  TagsSpec.hs  UsersSpec.hs
test/Json/: PrivateUserPreSpec.hs  PrivateUserSpec.hs  WithIdSpec.hs
test/Transforms/: NoneSpec.hs
tests/: TestUtility.hs  UserTestUtility.hs
tests/Api/: ResourceContentSpec.hs  ResourcesSpec.hs  TagsSpec.hs  UsersSpec.hs
tests/Json/: WithIdSpec.hs
tests/Transforms/: NoneSpec.hs
