name:                Brandy
version:             0.1.0.0
synopsis:            Blog engine written in Haskell.
homepage:            http://www.hackification.com
license:             MIT
license-file:        LICENSE
author:              Stu Smith
maintainer:          stusmith1977@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable Brandy
  main-is:             Main.hs
  other-modules:       Database, Routing, Schema, Api.Users, Api.Resources
  build-depends:         base
                       , text
                       , time
                       , transformers
                       , resourcet
                       , persistent
                       , persistent-template
                       , persistent-sqlite
                       , monad-control
                       , monad-logger
                       , esqueleto
                       , scotty
                       , aeson
  hs-source-dirs:      src, src/Api
  ghc-options:         -O2 -funbox-strict-fields -Wall -Werror
