name:                Brandy
version:             0.1.0.0
synopsis:            Blog engine written in Haskell.
homepage:            http://www.hackification.com
license:             MIT
license-file:        LICENSE
author:              Stu Smith
maintainer:          stusmith1977@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Brandy
  Default-Language:    Haskell2010
  main-is:             Main.hs
  other-modules:         ApiUtility, Database, Routing, Schema
                       , Api.Users, Api.Resources
                       , DataAccess.Users
                       , Json.PrivateUser, Json.PrivateUserPre, Json.PublicUserSummary
  build-depends:         base
                       , text
                       , time
                       , bytestring
                       , transformers
                       , resourcet
                       , mtl
                       , persistent
                       , persistent-template
                       , persistent-sqlite
                       , monad-control
                       , monad-logger
                       , esqueleto
                       , conduit-extra
                       , scotty ==0.6.2
                       , aeson
                       , http-types
                       , wai
                       , wai-test
                       , warp
                       , temporary
                       , conduit
                       , path-pieces
  hs-source-dirs:      src, src/Api
  ghc-options:         -O2 -funbox-strict-fields -Wall -Werror

Test-Suite spec
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      test, src
  Ghc-Options:         -Wall -Werror
  Main-Is:             Spec.hs
  Other-Modules:       Api.ResourcesSpec, Api.UsersSpec
  Build-Depends:       base
                       , hspec >= 1.3
                       , QuickCheck
                       , base
                       , text
                       , time
                       , bytestring
                       , transformers
                       , resourcet
                       , mtl
                       , persistent
                       , persistent-template
                       , persistent-sqlite
                       , monad-control
                       , monad-logger
                       , esqueleto
                       , conduit-extra
                       , scotty ==0.6.2
                       , aeson
                       , http-types
                       , wai
                       , wai-test
                       , warp
                       , temporary
                       , conduit
                       , path-pieces
